更新kafka的配置模板和start.sh